[gd_scene load_steps=3 format=3 uid="uid://bb3ybqhm3pvq5"]

[ext_resource type="Script" path="res://SampleProject/Scripts/Menus/LoadGameMenu.gd" id="1_load_menu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)

[node name="LoadGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_load_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MainPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Load Game"
horizontal_alignment = 1

[node name="SaveSlotsContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Slot1" type="Button" parent="MainPanel/VBoxContainer/SaveSlotsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
text = "Slot 1: Empty"

[node name="Slot2" type="Button" parent="MainPanel/VBoxContainer/SaveSlotsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
text = "Slot 2: Empty"

[node name="Slot3" type="Button" parent="MainPanel/VBoxContainer/SaveSlotsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
text = "Slot 3: Empty"

[node name="Slot4" type="Button" parent="MainPanel/VBoxContainer/SaveSlotsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
text = "Slot 4: Empty"

[node name="ButtonsContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="MainPanel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 40)
text = "Back"

[node name="DeleteButton" type="Button" parent="MainPanel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 40)
text = "Delete"
disabled = true

[node name="LoadButton" type="Button" parent="MainPanel/VBoxContainer/ButtonsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 40)
text = "Load"
disabled = true

