extends Control

# –°—Ü–µ–Ω–∞ –≤—ã–±–æ—Ä–∞ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è –¥–ª—è –∑–∞–≥—Ä—É–∑–∫–∏ –∏–≥—Ä—ã

@onready var save_slots_container: VBoxContainer = $MainPanel/VBoxContainer/SaveSlotsContainer
@onready var load_button: Button = $MainPanel/VBoxContainer/ButtonsContainer/LoadButton
@onready var back_button: Button = $MainPanel/VBoxContainer/ButtonsContainer/BackButton

var selected_slot: int = -1
var save_slots: Array[Dictionary] = []

const METSYS_SAVE_PATH = "user://example_save_data.sav"
const SAVE_SLOTS_COUNT = 3

func _ready() -> void:
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º –∫–Ω–æ–ø–∫–∏
	back_button.pressed.connect(_on_back_button_pressed)
	load_button.pressed.connect(_on_load_button_pressed)
	
	# –ó–∞–≥—Ä—É–∂–∞–µ–º –¥–∞–Ω–Ω—ã–µ SaveSystem –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ –ª–æ–∫–∞—Ü–∏—è—Ö
	_load_savesystem_data()
	
	# –ó–∞–≥—Ä—É–∂–∞–µ–º –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è—Ö
	_load_save_slots_info()
	_update_slots_display()

func _load_savesystem_data() -> void:
	"""–ó–∞–≥—Ä—É–∂–∞–µ—Ç –¥–∞–Ω–Ω—ã–µ SaveSystem –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è—Ö"""
	if Engine.has_singleton("ServiceLocator"):
		var service_locator = Engine.get_singleton("ServiceLocator")
		if service_locator and service_locator.has_method("get_save_system"):
			var save_system = service_locator.get_save_system()
			if save_system and save_system.has_method("load_player_data"):
				# –ó–∞–≥—Ä—É–∂–∞–µ–º –¥–∞–Ω–Ω—ã–µ, —á—Ç–æ–±—ã –ø–æ–ª—É—á–∏—Ç—å –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –ª–æ–∫–∞—Ü–∏—è—Ö
				save_system.load_player_data()

func _load_save_slots_info() -> void:
	"""–ó–∞–≥—Ä—É–∂–∞–µ—Ç –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –≤—Å–µ—Ö —Å–ª–æ—Ç–∞—Ö —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏–π"""
	save_slots.clear()
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º –æ—Å–Ω–æ–≤–Ω–æ–π —Å–ª–æ—Ç MetSys (—Å–ª–æ—Ç 1)
	var slot1_data = _get_save_slot_info(1)
	save_slots.append(slot1_data)
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º –¥–æ–ø–æ–ª–Ω–∏—Ç–µ–ª—å–Ω—ã–µ —Å–ª–æ—Ç—ã (–µ—Å–ª–∏ –æ–Ω–∏ –µ—Å—Ç—å)
	for i in range(2, SAVE_SLOTS_COUNT + 1):
		var slot_data = _get_save_slot_info(i)
		save_slots.append(slot_data)

func _get_save_slot_info(slot_number: int) -> Dictionary:
	"""–ü–æ–ª—É—á–∞–µ—Ç –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ —Å–ª–æ—Ç–µ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è"""
	var slot_data = {
		"slot_number": slot_number,
		"exists": false,
		"location": "",
		"time": "",
		"collectibles": 0,
		"file_path": ""
	}
	
	# –î–ª—è —Å–ª–æ—Ç–∞ 1 –ø—Ä–æ–≤–µ—Ä—è–µ–º –æ—Å–Ω–æ–≤–Ω–æ–π —Ñ–∞–π–ª MetSys
	if slot_number == 1:
		var metsys_path = METSYS_SAVE_PATH
		if FileAccess.file_exists(metsys_path):
			slot_data.exists = true
			slot_data.file_path = metsys_path
			# –ó–∞–≥—Ä—É–∂–∞–µ–º –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –∏–∑ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è
			var save_manager = SaveManager.new()
			if save_manager.load_from_text(metsys_path) == OK:
				slot_data.collectibles = save_manager.get_value("collectible_count", 0)
				# –ù–µ –∏—Å–ø–æ–ª—å–∑—É–µ–º current_room –Ω–∞–ø—Ä—è–º—É—é, –ª—É—á—à–µ –ø–æ–ª—É—á–∏—Ç—å –Ω–∞–∑–≤–∞–Ω–∏–µ –∏–∑ SaveSystem
			
			# –ü—Ä–æ–≤–µ—Ä—è–µ–º SaveSystem –¥–ª—è –¥–æ–ø–æ–ª–Ω–∏—Ç–µ–ª—å–Ω–æ–π –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏
			if Engine.has_singleton("ServiceLocator"):
				var service_locator = Engine.get_singleton("ServiceLocator")
				if service_locator and service_locator.has_method("get_save_system"):
					var save_system = service_locator.get_save_system()
					if save_system and save_system.has("player_data"):
						var player_data = save_system.player_data
						if player_data.has("save_location_name") and not player_data.save_location_name.is_empty():
							slot_data.location = player_data.save_location_name
						# –ï—Å–ª–∏ –Ω–∞–∑–≤–∞–Ω–∏–µ –Ω–µ –Ω–∞–π–¥–µ–Ω–æ, –ø—Ä–æ–±—É–µ–º –æ–ø—Ä–µ–¥–µ–ª–∏—Ç—å –ø–æ –∏–º–µ–Ω–∏ –∫–æ–º–Ω–∞—Ç—ã –∏–∑ MetSys
						elif slot_data.location.is_empty():
							var current_room = save_manager.get_value("current_room", "")
							if not current_room.is_empty():
								# –ü—Ä–æ–±—É–µ–º –æ–ø—Ä–µ–¥–µ–ª–∏—Ç—å –Ω–∞–∑–≤–∞–Ω–∏–µ –ø–æ –∏–º–µ–Ω–∏ –∫–æ–º–Ω–∞—Ç—ã
								if current_room.begins_with("StartingPoint") or current_room.contains("Starting"):
									slot_data.location = "–õ–∞–±–æ—Ä–∞—Ç–æ—Ä–∏—è"
								else:
									slot_data.location = current_room
							else:
								# –¢–æ–ª—å–∫–æ –µ—Å–ª–∏ —Å–æ–≤—Å–µ–º –Ω–∏—á–µ–≥–æ –Ω–µ –Ω–∞–π–¥–µ–Ω–æ
								slot_data.location = "–õ–∞–±–æ—Ä–∞—Ç–æ—Ä–∏—è"
						if player_data.has("last_save_time") and not player_data.last_save_time.is_empty():
							slot_data.time = player_data.last_save_time
			# –ï—Å–ª–∏ SaveSystem –Ω–µ–¥–æ—Å—Ç—É–ø–µ–Ω, –ø—Ä–æ–±—É–µ–º –æ–ø—Ä–µ–¥–µ–ª–∏—Ç—å –ø–æ –∏–º–µ–Ω–∏ –∫–æ–º–Ω–∞—Ç—ã
			elif slot_data.location.is_empty():
				var current_room = save_manager.get_value("current_room", "")
				if not current_room.is_empty():
					if current_room.begins_with("StartingPoint") or current_room.contains("Starting"):
						slot_data.location = "–õ–∞–±–æ—Ä–∞—Ç–æ—Ä–∏—è"
					else:
						slot_data.location = current_room
				else:
					slot_data.location = "–õ–∞–±–æ—Ä–∞—Ç–æ—Ä–∏—è"
	else:
		# –î–ª—è –¥—Ä—É–≥–∏—Ö —Å–ª–æ—Ç–æ–≤ –ø—Ä–æ–≤–µ—Ä—è–µ–º –æ—Ç–¥–µ–ª—å–Ω—ã–µ —Ñ–∞–π–ª—ã (–µ—Å–ª–∏ –æ–Ω–∏ –µ—Å—Ç—å)
		var slot_path = "user://save_slot_%d.sav" % slot_number
		if FileAccess.file_exists(slot_path):
			slot_data.exists = true
			slot_data.file_path = slot_path
			# –ó–∞–≥—Ä—É–∂–∞–µ–º –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –∏–∑ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è
			var save_manager = SaveManager.new()
			if save_manager.load_from_text(slot_path) == OK:
				slot_data.collectibles = save_manager.get_value("collectible_count", 0)
				var current_room = save_manager.get_value("current_room", "")
				if not current_room.is_empty():
					slot_data.location = current_room
	
	return slot_data

func _update_slots_display() -> void:
	"""–û–±–Ω–æ–≤–ª—è–µ—Ç –æ—Ç–æ–±—Ä–∞–∂–µ–Ω–∏–µ —Å–ª–æ—Ç–æ–≤ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏–π"""
	for i in range(save_slots_container.get_child_count()):
		var slot_button = save_slots_container.get_child(i) as Button
		if slot_button:
			var slot_data: Dictionary = {}
			if i < save_slots.size():
				slot_data = save_slots[i]
			if slot_data.has("exists") and slot_data.exists:
				# –§–æ—Ä–º–∏—Ä—É–µ–º —Ç–µ–∫—Å—Ç –¥–ª—è —Å–ª–æ—Ç–∞ —Å —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ–º
				var slot_text = "Slot %d: " % (i + 1)
				# –ò—Å–ø–æ–ª—å–∑—É–µ–º —Å–æ—Ö—Ä–∞–Ω–µ–Ω–Ω–æ–µ –Ω–∞–∑–≤–∞–Ω–∏–µ –ª–æ–∫–∞—Ü–∏–∏
				var location_name = slot_data.location
				if location_name.is_empty():
					# –¢–æ–ª—å–∫–æ –µ—Å–ª–∏ –Ω–∞–∑–≤–∞–Ω–∏–µ –Ω–µ –Ω–∞–π–¥–µ–Ω–æ, –∏—Å–ø–æ–ª—å–∑—É–µ–º fallback
					location_name = "Unknown Location"
				slot_text += location_name
				
				# –î–æ–±–∞–≤–ª—è–µ–º –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –ø—Ä–µ–¥–º–µ—Ç–∞—Ö
				if slot_data.collectibles > 0:
					slot_text += " (%d/6 –ø—Ä–µ–¥–º–µ—Ç–æ–≤)" % slot_data.collectibles
				
				# –î–æ–±–∞–≤–ª—è–µ–º –≤—Ä–µ–º—è —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è
				if not slot_data.time.is_empty():
					slot_text += "\n%s" % slot_data.time
				
				slot_button.text = slot_text
				slot_button.disabled = false
			else:
				# –ü—É—Å—Ç–æ–π —Å–ª–æ—Ç
				slot_button.text = "Slot %d: Empty" % (i + 1)
				slot_button.disabled = false
			
			# –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª –Ω–∞–∂–∞—Ç–∏—è
			if not slot_button.pressed.is_connected(_on_slot_button_pressed):
				slot_button.pressed.connect(_on_slot_button_pressed.bind(i))

func _on_slot_button_pressed(slot_index: int) -> void:
	"""–û–±—Ä–∞–±–æ—Ç–∫–∞ –Ω–∞–∂–∞—Ç–∏—è –Ω–∞ —Å–ª–æ—Ç —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è"""
	selected_slot = slot_index
	
	# –í—ã–¥–µ–ª—è–µ–º –≤—ã–±—Ä–∞–Ω–Ω—ã–π —Å–ª–æ—Ç
	for i in range(save_slots_container.get_child_count()):
		var slot_button = save_slots_container.get_child(i) as Button
		if slot_button:
			if i == slot_index:
				slot_button.modulate = Color(1.2, 1.2, 1.0, 1.0)  # –í—ã–¥–µ–ª—è–µ–º –≤—ã–±—Ä–∞–Ω–Ω—ã–π
			else:
				slot_button.modulate = Color(1, 1, 1, 1)  # –û–±—ã—á–Ω—ã–π —Ü–≤–µ—Ç
	
	# –í–∫–ª—é—á–∞–µ–º –∫–Ω–æ–ø–∫—É –∑–∞–≥—Ä—É–∑–∫–∏, –µ—Å–ª–∏ —Å–ª–æ—Ç —Å–æ–¥–µ—Ä–∂–∏—Ç —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ
	if slot_index < save_slots.size() and save_slots[slot_index].exists:
		load_button.disabled = false
	else:
		load_button.disabled = true

func _on_load_button_pressed() -> void:
	"""–ó–∞–≥—Ä—É–∂–∞–µ—Ç –≤—ã–±—Ä–∞–Ω–Ω–æ–µ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏–µ"""
	if selected_slot < 0 or selected_slot >= save_slots.size():
		return
	
	var slot_data = save_slots[selected_slot]
	if not slot_data.exists:
		return
	
	# –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º –ø—É—Ç—å –∫ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—é –¥–ª—è –∑–∞–≥—Ä—É–∑–∫–∏
	if selected_slot == 0:
		# –°–ª–æ—Ç 1 –∏—Å–ø–æ–ª—å–∑—É–µ—Ç –æ—Å–Ω–æ–≤–Ω–æ–π –ø—É—Ç—å
		get_tree().set_meta("save_file_path", METSYS_SAVE_PATH)
	else:
		# –î—Ä—É–≥–∏–µ —Å–ª–æ—Ç—ã –∏—Å–ø–æ–ª—å–∑—É—é—Ç —Å–≤–æ–∏ –ø—É—Ç–∏
		get_tree().set_meta("save_file_path", slot_data.file_path)
	
	# –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º —Ñ–ª–∞–≥ –∑–∞–≥—Ä—É–∑–∫–∏
	get_tree().set_meta("start_new_game", false)
	
	print("üìÇ LoadGameMenu: Loading save from slot %d" % (selected_slot + 1))
	
	# –ü–µ—Ä–µ—Ö–æ–¥–∏–º –∫ –∏–≥—Ä–µ
	get_tree().change_scene_to_file("res://SampleProject/Game.tscn")

func _on_back_button_pressed() -> void:
	"""–í–æ–∑–≤—Ä–∞—Ç –≤ –≥–ª–∞–≤–Ω–æ–µ –º–µ–Ω—é"""
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø—Ä–∞–≤–∏–ª—å–Ω—ã–π –ø—É—Ç—å –∫ MainMenu
	var main_menu_path = "res://SampleProject/MainMenu.tscn"
	if not ResourceLoader.exists(main_menu_path):
		# –ü—Ä–æ–±—É–µ–º –∞–ª—å—Ç–µ—Ä–Ω–∞—Ç–∏–≤–Ω—ã–π –ø—É—Ç—å
		main_menu_path = "res://MainMenu.tscn"
	get_tree().change_scene_to_file(main_menu_path)

const SaveManager = preload("res://addons/MetroidvaniaSystem/Template/Scripts/SaveManager.gd")
